# rustbill

./: .gitignore  Cargo.toml  README.md  config.yaml  config_sample.yaml
sample/: SampleCompany.csv  config.yaml
src/: calculate.rs  config_reader.rs  csv_reader.rs  date_utils.rs  db.rs  ebill.rs  mail.rs  main.rs  pdf_gen.rs  qrcode.rs  sign.rs
templates/: axis.typ  ebill.xml  invoice.typ  template.typ  template_test.typ
