patch = { crates-io = { pdf_signing = { path = "/Users/simeon/.rhack/pdf_signing-0.3.0" } } }
[package]
name = "rustbill"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.1"
image = "0.25.5"
qrcode = "0.14.1"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
rusty-money = "0.4.1"
serde = { version = "1.0.215", features = ["derive"]}
serde_yaml = "0.9.34"
thiserror = "2.0.3"
derive_typst_intoval = "0.3.0"
typst = "0.12.0"
typst-as-lib = "0.11.1"
typst-pdf = "0.12.0"
bdays = "0.1.4"
pdf_signing = "0.3.0"
x509-certificate = "0.24.0"
cryptographic-message-syntax = "0.27.0"
zugferd = "0.1.3"
serde_json = "1.0.133"
chrono = { version = "0.4.38", features = ["unstable-locales"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
imap = "2.4.1"
dotenv = "0.15.0"
native-tls = "0.2.12"
lettre = "0.11.10"
rand = "0.8.5"
lopdf = "0.34.0"
